--- a/.github/workflows/grid3-go-test.yml
+++ b/.github/workflows/grid3-go-test.yml
@@ -1,6 +1,10 @@
 name: Grid3 Go Testing
 
-on: [push]
+on:
+  push:
+    paths:
+      - grid3-go/**
+  workflow_dispatch:
 
 defaults:
   run:
@@ -23,10 +27,10 @@ jobs:
 
       - name: Get dependencies
         run: |
-          go mod download
+          cd grid3-go && go mod download
 
       - name: Test
         env:
           MNEMONICS: ${{ secrets.MNEMONICS }}
           NETWORK: dev
-        run: go test -v `go list ./... | grep -v integration_tests`
+        run: cd grid3-go && go test -v `go list ./... | grep -v integration_tests`
