--- a/.github/workflows/monbot-lint.yml
+++ b/.github/workflows/monbot-lint.yml
@@ -1,16 +1,14 @@
 name: monbot lint
 
-
 defaults:
   run:
     working-directory: monitoring-bot
 
-
 on:
   push:
-    branches: ["main", "development"]
-  pull_request:
-    branches: ["main", "development"]
+    paths:
+      - monitoring-bot/**
+  workflow_dispatch:
 
 jobs:
   Explore-Package:
@@ -33,6 +31,7 @@ jobs:
           version: "2022.1.3"
         env:
           GO111MODULE: on
+          working-directory: monitoring-bot
 
       - name: gofmt
         uses: Jerome1337/gofmt-action@v1.0.5
