--- a/.github/workflows/monbot-lint.yml
+++ b/.github/workflows/monbot-lint.yml
@@ -24,6 +24,9 @@ jobs:
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
+        with:
+          args: --timeout 3m --verbose
+          working-directory: grid3-go
 
       - name: staticcheck
         uses: dominikh/staticcheck-action@v1.3.0
@@ -31,7 +34,6 @@ jobs:
           version: "2022.1.3"
         env:
           GO111MODULE: on
-          working-directory: monitoring-bot
 
       - name: gofmt
         uses: Jerome1337/gofmt-action@v1.0.5
