--- a/.github/workflows/monbot-lint.yml
+++ b/.github/workflows/monbot-lint.yml
@@ -32,6 +32,7 @@ jobs:
         uses: dominikh/staticcheck-action@v1.3.0
         with:
           version: "2022.1.3"
+          working-directory: monitoring-bot
         env:
           GO111MODULE: on
 
