--- a/.github/workflows/proxy-integration.yml
+++ b/.github/workflows/proxy-integration.yml
@@ -1,14 +1,12 @@
 name: proxy Integration tests
 
-
 defaults:
   run:
     working-directory: gridproxy
 on:
   push:
-    branches: [ main, development ]
-  pull_request:
-    branches: [ main, development ]
+    paths:
+      - gridproxy/**
   workflow_dispatch:
 
 jobs:
@@ -29,31 +27,31 @@ jobs:
         ports:
           - 5432:5432
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
 
-    - name: Build
-      run: |
-        export PATH=/home/runner/go/bin:$PATH
-        export GIT_COMMIT=$(git rev-list -1 HEAD) 
-        go build -ldflags "-X main.GitCommit=$GIT_COMMIT" cmds/proxy_server/main.go
-      env:
-        GO111MODULE: on
+      - name: Build
+        run: |
+          export PATH=/home/runner/go/bin:$PATH
+          export GIT_COMMIT=$(git rev-list -1 HEAD) 
+          go build -ldflags "-X main.GitCommit=$GIT_COMMIT" cmds/proxy_server/main.go
+        env:
+          GO111MODULE: on
 
-    - name: Test
-      env:
-        MNEMONICS: ${{ secrets.MNEMONICS }}
-      run: |
-        export PATH=/home/runner/go/bin:$PATH
-        pushd tools/db
-        go run . --seed 13 --postgres-host localhost --postgres-db tfgrid-graphql --postgres-password postgres --postgres-user postgres --reset
-        popd
-        go run cmds/proxy_server/main.go -no-cert --address :8080 --log-level debug --postgres-host localhost --postgres-db tfgrid-graphql --postgres-password postgres --postgres-user postgres --mnemonics "$MNEMONICS" &
-        sleep 6
-        pushd tests/queries
-        go test -v --seed 13 --postgres-host localhost --postgres-db tfgrid-graphql --postgres-password postgres --postgres-user postgres --endpoint http://localhost:8080
-        popd
+      - name: Test
+        env:
+          MNEMONICS: ${{ secrets.MNEMONICS }}
+        run: |
+          export PATH=/home/runner/go/bin:$PATH
+          pushd tools/db
+          go run . --seed 13 --postgres-host localhost --postgres-db tfgrid-graphql --postgres-password postgres --postgres-user postgres --reset
+          popd
+          go run cmds/proxy_server/main.go -no-cert --address :8080 --log-level debug --postgres-host localhost --postgres-db tfgrid-graphql --postgres-password postgres --postgres-user postgres --mnemonics "$MNEMONICS" &
+          sleep 6
+          pushd tests/queries
+          go test -v --seed 13 --postgres-host localhost --postgres-db tfgrid-graphql --postgres-password postgres --postgres-user postgres --endpoint http://localhost:8080
+          popd
