--- a/.github/workflows/proxy-unit.yml
+++ b/.github/workflows/proxy-unit.yml
@@ -1,36 +1,34 @@
 name: proxy Unit tests
 
-
 defaults:
   run:
     working-directory: monitoring-bot
 
 on:
   push:
-    branches: [ main, development ]
-  pull_request:
-    branches: [ main, development ]
+    paths:
+      - gridproxy/**
   workflow_dispatch:
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
 
-    - name: Build
-      run: |
-        export PATH=/home/runner/go/bin:$PATH
-        export GIT_COMMIT=$(git rev-list -1 HEAD) 
-        go build -ldflags "-X main.GitCommit=$GIT_COMMIT" cmds/proxy_server/main.go
-      env:
-        GO111MODULE: on
+      - name: Build
+        run: |
+          export PATH=/home/runner/go/bin:$PATH
+          export GIT_COMMIT=$(git rev-list -1 HEAD) 
+          go build -ldflags "-X main.GitCommit=$GIT_COMMIT" cmds/proxy_server/main.go
+        env:
+          GO111MODULE: on
 
-    - name: Test
-      run: |
-        go test -v ./pkg/client
+      - name: Test
+        run: |
+          go test -v ./pkg/client
