--- a/.github/workflows/proxy-go.yml
+++ b/.github/workflows/proxy-go.yml
@@ -1,45 +1,43 @@
 name: proxy Build and lint the source code
 
-
 defaults:
   run:
     working-directory: gridproxy
 
 on:
   push:
-    branches: [ main, development ]
-  pull_request:
-    branches: [ main, development ]
+    paths:
+      - gridproxy/**
+  workflow_dispatch:
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.19
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.19
 
-    - name: Build
-      run: |
-        export PATH=/home/runner/go/bin:$PATH
-        export GIT_COMMIT=$(git rev-list -1 HEAD) 
-        go build -ldflags "-X main.GitCommit=$GIT_COMMIT" cmds/proxy_server/main.go
-      env:
-        GO111MODULE: on
+      - name: Build
+        run: |
+          export PATH=/home/runner/go/bin:$PATH
+          export GIT_COMMIT=$(git rev-list -1 HEAD) 
+          go build -ldflags "-X main.GitCommit=$GIT_COMMIT" cmds/proxy_server/main.go
+        env:
+          GO111MODULE: on
 
-    - name: golangci-lint
-      uses: golangci/golangci-lint-action@v3
-    
-    - name: staticcheck
-      uses: dominikh/staticcheck-action@v1.3.0
-      with:
-        version: "2022.1.3"
-      env:
-        GO111MODULE: on
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
 
-    - name: Test version
-      run: ./main -v
+      - name: staticcheck
+        uses: dominikh/staticcheck-action@v1.3.0
+        with:
+          version: "2022.1.3"
+        env:
+          GO111MODULE: on
+
+      - name: Test version
+        run: ./main -v
