--- a/.github/workflows/grid3-go-lint.yml
+++ b/.github/workflows/grid3-go-lint.yml
@@ -33,6 +33,14 @@ jobs:
           args: --timeout 3m --verbose
           working-directory: grid3-go
 
+      - name: staticcheck
+        uses: dominikh/staticcheck-action@v1.3.0
+        with:
+          version: "2022.1.3"
+          working-directory: grid3-go
+        env:
+          GO111MODULE: on
+
       - name: gofmt
         uses: Jerome1337/gofmt-action@v1.0.5
         with:
