--- a/.github/workflows/proxy-go.yml
+++ b/.github/workflows/proxy-go.yml
@@ -30,7 +30,8 @@ jobs:
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
-        args: --out-format=github-actions -- $(go work edit -json | jq -c -r '[.Use[].DiskPath | select(. != "syncx" and . != "process")] | map_values(. + "/...")[]')
+        with:
+          args: --out-format=github-actions -- $(go work edit -json | jq -c -r '[.Use[].DiskPath | select(. != "syncx" and . != "process")] | map_values(. + "/...")[]')
 
       - name: staticcheck
         uses: dominikh/staticcheck-action@v1.3.0
