--- a/grid-proxy/Makefile
+++ b/grid-proxy/Makefile
@@ -87,3 +87,39 @@ test-all: test-unit test-queries ## Run all unit/queries tests
 help:
 	@printf "%s\n" "Avilable targets:"
 	@grep -E '^[a-zA-Z0-9_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m  make %-15s\033[0m %s\n", $$1, $$2}'
+
+getverifiers:
+	@echo "Installing staticcheck" && go get -u honnef.co/go/tools/cmd/staticcheck && go install honnef.co/go/tools/cmd/staticcheck
+	@echo "Installing gocyclo" && go get -u github.com/fzipp/gocyclo/cmd/gocyclo && go install github.com/fzipp/gocyclo/cmd/gocyclo
+	@echo "Installing deadcode" && go get -u github.com/remyoudompheng/go-misc/deadcode && go install github.com/remyoudompheng/go-misc/deadcode
+	@echo "Installing misspell" && go get -u github.com/client9/misspell/cmd/misspell && go install github.com/client9/misspell/cmd/misspell
+	@echo "Installing golangci-lint" && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.50.1
+	go mod tidy
+
+verifiers: fmt lint cyclo deadcode spelling staticcheck
+
+checks: verifiers
+
+fmt:
+	@echo "Running $@"
+	@gofmt -d .
+
+lint:
+	@echo "Running $@"
+	@$(shell go env GOPATH)/bin/golangci-lint run
+
+cyclo:
+	@echo "Running $@"
+	@$(shell go env GOPATH)/bin/gocyclo -over 100 .
+
+deadcode:
+	@echo "Running $@"
+	@$(shell go env GOPATH)/bin/deadcode -test $(shell go list ./...) || true
+
+spelling:
+	@echo "Running $@"
+	@$(shell go env GOPATH)/bin/misspell -i monitord -error `find .`
+
+staticcheck:
+	@echo "Running $@"
+	@$(shell go env GOPATH)/bin/staticcheck -- ./...
