Update binary name

--- a/grid-cli/.goreleaser.yaml
+++ b/grid-cli/.goreleaser.yaml
@@ -13,6 +13,10 @@ builds:
       - linux
       - windows
       - darwin
+      
+    binary: tf-grid-cli
+    id: tf-grid-cli
+
     ignore:
     - goos: windows 
       goarch: 'arm64'
