--- a/grid-cli/.goreleaser.yaml
+++ b/grid-cli/.goreleaser.yaml
@@ -6,6 +6,7 @@ before:
     - go mod tidy
     # you may remove this if you don't need go generate
     - go generate ./...
+project_name: tf-grid-cli
 builds:
   - env:
       - CGO_ENABLED=0
@@ -13,7 +14,6 @@ builds:
       - linux
       - windows
       - darwin
-      
     binary: tf-grid-cli
     id: tf-grid-cli
 
