--- a/monitoring-bot/Makefile
+++ b/monitoring-bot/Makefile
@@ -47,12 +47,13 @@ benchmarks:
 	go test -v -vet=off ./... -bench=. -count 1 -benchtime=10s -benchmem -run=^#
 
 coverage: clean 
+	@echo "Installing gopherbadger" && go get -u github.com/jpoles1/gopherbadger && go install github.com/jpoles1/gopherbadger
 	mkdir coverage
 	go test -v -vet=off ./... -coverprofile=coverage/coverage.out
 	go tool cover -html=coverage/coverage.out -o coverage/coverage.html
 	@${GOPATH}/bin/gopherbadger -png=false -md="README.md"
 	rm coverage.out
-
+	go mod tidy
 
 testrace: verifiers
 	go test -v -race -vet=off ./...
