--- a/grid-client/Makefile
+++ b/grid-client/Makefile
@@ -12,11 +12,13 @@ integration:
 	go test -v ./integration_tests -tags integration
 
 coverage: clean 
+	@echo "Installing gopherbadger" && go get -u github.com/jpoles1/gopherbadger && go install github.com/jpoles1/gopherbadger
 	mkdir coverage
-	go test -v -vet=off `go list ./... | grep -v integration_tests` -coverprofile=coverage/coverage.out
+	go test -v -vet=off ./... -coverprofile=coverage/coverage.out
 	go tool cover -html=coverage/coverage.out -o coverage/coverage.html
 	@${GOPATH}/bin/gopherbadger -png=false -md="README.md"
 	rm coverage.out
+	go mod tidy
 
 clean:
 	rm ./coverage -rf
