--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,14 +1,8 @@
 # This is an example .goreleaser.yml file with some sensible defaults.
 # Make sure to check the documentation at https://goreleaser.com
-before:
-  hooks:
-    # You may remove this if you don't use go modules.
-    - go mod tidy
-    # you may remove this if you don't need go generate
-    - go generate ./...
-project_name: tf-grid-cli
 builds:
-  - env:
+  - dir: ./grid-cli
+    env:
       - CGO_ENABLED=0
     goos:
       - linux
@@ -18,11 +12,45 @@ builds:
     id: tf-grid-cli
 
     ignore:
-    - goos: windows 
-      goarch: 'arm64'
+      - goos: windows
+        goarch: "arm64"
     ldflags:
       - -X github.com/threefoldtech/tfgrid-sdk-go/grid-cli/cmd.version={{.Tag}}
       - -X github.com/threefoldtech/tfgrid-sdk-go/grid-cli/cmd.commit={{.Commit}}
+
+  - dir: ./gridify
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+      - windows
+      - darwin
+    binary: gridify
+    id: gridify
+
+    ignore:
+      - goos: windows
+        goarch: "arm64"
+    ldflags:
+      - -X github.com/threefoldtech/tfgrid-sdk-go/gridify/cmd.version={{.Tag}}
+      - -X github.com/threefoldtech/tfgrid-sdk-go/gridify/cmd.commit={{.Commit}}
+
+  - dir: ./monitoring-bot
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+      - windows
+      - darwin
+    binary: monitoring-bot
+    id: monitoring-bot
+
+    ignore:
+      - goos: windows
+        goarch: "arm64"
+    ldflags:
+      - -X github.com/threefoldtech/tfgrid-sdk-go/monitoring-bot/cmd.version={{.Tag}}
+      - -X github.com/threefoldtech/tfgrid-sdk-go/monitoring-bot/cmd.commit={{.Commit}}
 
 archives:
   - format: tar.gz
@@ -36,19 +64,18 @@ archives:
       {{- if .Arm }}v{{ .Arm }}{{ end }}
     # use zip for windows archives
     format_overrides:
-    - goos: windows
-      format: zip
+      - goos: windows
+        format: zip
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
 changelog:
   sort: asc
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
-
+      - "^docs:"
+      - "^test:"
 # The lines beneath this are called `modelines`. See `:help modeline`
 # Feel free to remove those if you don't want/use them.
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
