--- a/grid-proxy/CODEOWNERS
+++ b/grid-proxy/CODEOWNERS
@@ -1,1 +1,1 @@
-* @MarioBassem @AhmedHanafy725 @Omarabdul3ziz @sameh-farouk @rawdaGastan @AbdelrahmanElawady
+* @MarioBassem @AhmedHanafy725 @Omarabdul3ziz @sameh-farouk @AbdelrahmanElawady
