--- a/grid-cli/Makefile
+++ b/grid-cli/Makefile
@@ -5,11 +5,7 @@ all: verifiers test
 
 test: 
 	@echo "Running Tests"
-	go test -v `go list ./... | grep -v integration_tests`
-
-integration:
-	@echo "Running integration tests"
-	go test -v ./integration_tests -tags integration
+	go test -v ./...
 
 coverage: clean 
 	@echo "Installing gopherbadger" && go get -u github.com/jpoles1/gopherbadger && go install github.com/jpoles1/gopherbadger
