--- a/monitoring-bot/Makefile
+++ b/monitoring-bot/Makefile
@@ -18,6 +18,8 @@ getdeps:
 
 verifiers: fmt lint cyclo deadcode spelling staticcheck
 
+checks: verifiers
+
 fmt:
 	@echo "Running $@"
 	@gofmt -d .
