grid-proxy perms

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,2 @@
 * @muhamadazmy @MarioBassem @ashraffouda @rawdaGastan @AlaaElattar @AbdelrahmanElawady @xmonader
+grid-proxy @alichaddad @sameh-farouk
