Fixing Makefile's start script

--- a/grid-proxy/Makefile
+++ b/grid-proxy/Makefile
@@ -42,7 +42,7 @@ db-stop: ## Stop the database container if running
 		docker stop postgres; \
 	fi
 
-start: ## Start the proxy server
+server-start: ## Start the proxy server			(Args: `m=<MNEMONICS>`)
 	@go run cmds/proxy_server/main.go \
 		-no-cert \
 		--address :8080 \
@@ -50,9 +50,10 @@ start: ## Start the proxy server
 		--postgres-host $(PQ_HOST) \
 		--postgres-db tfgrid-graphql \
 		--postgres-password postgres \
-		--postgres-user postgres
+		--postgres-user postgres \
+		--mnemonics "$(m)" ;
 
-restart: db-stop db-start sleep db-fill start ## Full start of the database and the server
+all-start: db-stop db-start sleep db-fill server-start ## Full start of the database and the server (Args: `m=<MNEMONICS>`)
 
 sleep:
 	@sleep 5
