--- a/grid-proxy/charts/gridproxy/Chart.yaml
+++ b/grid-proxy/charts/gridproxy/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: gridproxy
+name: tfgridproxy
 description: A Helm chart for grid proxy server
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -15,9 +15,9 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.1.1
+version: 1.0.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: v1.8.0-rc3
+appVersion: v0.3.0
