Fixing (would clobber existing tag) workflow error (#113)
* Fixing (would clobber existing tag) workflow error

* using metadata action output instaed of latest-tag

* Adding debugging logs

--- a/.github/workflows/gridproxy-release.yml
+++ b/.github/workflows/gridproxy-release.yml
@@ -18,12 +18,6 @@ jobs:
       - name: Checkout the repo
         uses: actions/checkout@v3.5.2
 
-      - name: "Get Previous tag"
-        id: previoustag
-        uses: actions-ecosystem/action-get-latest-tag@v1
-        with:
-          fallback: latest # Optional fallback tag to use when no tag can be found
-
       - name: Log in to the Container registry
         uses: docker/login-action@v2.1.0
         with:
@@ -47,4 +41,6 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            version=${{ steps.previoustag.outputs.tag }}
+            version=${{ steps.meta.outputs.tags[0] }}
+      - name: Debugging
+        run: echo ${{ steps.meta.outputs.tags[0] }}
