--- a/.github/workflows/gridproxy-release.yml
+++ b/.github/workflows/gridproxy-release.yml
@@ -40,7 +40,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          #  For workflows triggered by release, `github.ref_name` is the short name for the release tag created.
           build-args: |
-            version=${{ steps.meta.outputs.tags[0] }}
-      - name: Debugging
-        run: echo ${{ steps.meta.outputs.tags[0] }}
+            version=${{ github.ref_name	 }}
