--- a/.github/workflows/gridproxy-release.yml
+++ b/.github/workflows/gridproxy-release.yml
@@ -37,7 +37,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: "grid-proxy"
+          context: .
+          file: ./grid-proxy/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
