--- a/.github/workflows/gridproxy-build.yml
+++ b/.github/workflows/gridproxy-build.yml
@@ -50,7 +50,7 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
 
-      - name: Build and push Docker image
+      - name: Build Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
