--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,9 +9,37 @@ updates:
       # Check for updates to GitHub Actions every weekday
       interval: "daily"
 
-  # Maintain dependencies for Go modules
   - package-ecosystem: "gomod"
-    directory: "/"
+    directory: "/activation-service"
     schedule:
-      # Check for updates to Go modules every weekday
+      interval: "daily"
+
+  - package-ecosystem: "gomod"
+    directory: "/grid-cli"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "gomod"
+    directory: "/grid-client"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "gomod"
+    directory: "/grid-proxy"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "gomod"
+    directory: "/gridify"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "gomod"
+    directory: "/monitoring-bot"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "gomod"
+    directory: "/rmb-sdk-go"
+    schedule:
       interval: "daily"
