--- a/.github/workflows/activation-publish.yml
+++ b/.github/workflows/activation-publish.yml
@@ -1,12 +1,16 @@
 name: Publish Docker image for activation service
 
 on:
+  workflow_dispatch:
   release:
     types: [published]
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: activation-service
     permissions:
       contents: read
       packages: write
@@ -45,7 +49,7 @@ jobs:
         uses: fjogeleit/http-request-action@v1
         with:
           url: https://hub.grid.tf/api/flist/me/docker
-          method: 'POST'
+          method: "POST"
           bearerToken: ${{ secrets.HUB_TOKEN }}
           customHeaders: '{"Content-Type": "application/json"}'
           data: '{"image": "ghcr.io/threefoldtech/tfactivation"}'
