update gridproxy build workflow to run with new PRs
Signed-off-by: mario <mariobassem12@gmail.com>

--- a/.github/workflows/gridproxy-build.yml
+++ b/.github/workflows/gridproxy-build.yml
@@ -4,6 +4,11 @@ on:
   push:
     paths:
       - grid-proxy/**
+  pull_request:
+      types: [opened, reopened, review_requested]
+      paths:
+        - grid-proxy/**
+        
   workflow_dispatch:
 
 jobs:
