--- a/.github/workflows/gridproxy-unittests.yml
+++ b/.github/workflows/gridproxy-unittests.yml
@@ -8,6 +8,10 @@ on:
   push:
     paths:
       - grid-proxy/**
+  pull_request:
+    types: [opened, reopened, review_requested]
+    paths:
+      - grid-proxy/**
   workflow_dispatch:
 
 jobs:
