--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,1 @@
-* @muhamadazmy @MarioBassem @ashraffouda @rawdaGastan @AlaaElattar @AbdelrahmanElawady @xmonader
-grid-proxy @alichaddad @sameh-farouk
+* @muhamadazmy @MarioBassem @ashraffouda @rawdaGastan @AlaaElattar @AbdelrahmanElawady @xmonader @sameh-farouk
