--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,4 +28,4 @@ jobs:
           args: release --rm-dist
         env:
           # GitHub sets this automatically
-          GITHUB_TOKEN: ${{ secrets.RELEASE_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
