--- a/.github/workflows/contracts-mon-lint.yml
+++ b/.github/workflows/contracts-mon-lint.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Install GO
         uses: actions/setup-go@v4
         with:
-          go-version: 1.19
+          go-version: "1.21"
+        id: go
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
