--- a/.github/workflows/gridproxy-integrationtests.yml
+++ b/.github/workflows/gridproxy-integrationtests.yml
@@ -4,10 +4,12 @@ on:
   push:
     paths:
       - grid-proxy/**
+      - rmb-sdk-go/**
   pull_request:
     types: [opened, reopened, review_requested]
     paths:
       - grid-proxy/**
+      - rmb-sdk-go/**
 
   workflow_dispatch:
 
