--- a/.github/workflows/gridproxy-unittests.yml
+++ b/.github/workflows/gridproxy-unittests.yml
@@ -8,10 +8,12 @@ on:
   push:
     paths:
       - grid-proxy/**
+      - rmb-sdk-go/**
   pull_request:
     types: [opened, reopened, review_requested]
     paths:
       - grid-proxy/**
+      - rmb-sdk-go/**
   workflow_dispatch:
 
 jobs:
