--- a/.github/workflows/monbot-test.yml
+++ b/.github/workflows/monbot-test.yml
@@ -10,6 +10,7 @@ on:
       - monitoring-bot/**
       - rmb-sdk-go/**
       - grid-proxy/**
+      - grid-client/**
   workflow_dispatch:
 
 jobs:
