Improve Workflows Triggers (#425)
* trigger gird-client and gridify workflows on rmb changes

* trigger test workflows on rmb changes

* trigger test workflows on grid-proxy changes

* trigger test workflows on grid-client changes

--- a/.github/workflows/tf-grid-cli-test.yml
+++ b/.github/workflows/tf-grid-cli-test.yml
@@ -8,6 +8,9 @@ on:
   push:
     paths:
       - grid-cli/**
+      - rmb-sdk-go/**
+      - grid-proxy/**
+      - grid-client/**
   workflow_dispatch:
 
 jobs:
