--- a/.github/workflows/gridify-test.yml
+++ b/.github/workflows/gridify-test.yml
@@ -8,6 +8,9 @@ on:
   push:
     paths:
       - gridify/**
+      - rmb-sdk-go/**
+      - grid-proxy/**
+      - grid-client/**
   workflow_dispatch:
 
 jobs:
