--- a/user-contracts-mon/Dockerfile
+++ b/user-contracts-mon/Dockerfile
@@ -1,7 +1,5 @@
 FROM golang:1.21-alpine
 
-ARG env 
-
 WORKDIR /contracts-mon-bot
 
 COPY . .
@@ -10,4 +8,4 @@ RUN go mod tidy
 
 RUN go build -o contractsmon main.go
 
-CMD ./contractsmon -e ${env}
+CMD ./contractsmon -e .env 
