--- a/.github/workflows/activation-test.yml
+++ b/.github/workflows/activation-test.yml
@@ -1,11 +1,13 @@
-name: monbot test
+name: activation service test
 
 defaults:
   run:
-    working-directory: monitoring-bot
+    working-directory: activation-service
 
 on:
   push:
+    paths:
+      - activation-service/**
   workflow_dispatch:
 
 jobs:
@@ -19,6 +21,10 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.21
+
+      - name: Get dependencies
+        run: |
+          go mod download
 
       - name: Test
         run: go test -v ./...
