--- a/user-contracts-mon/Dockerfile
+++ b/user-contracts-mon/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /contracts-mon-bot
 
 COPY . .
 
+WORKDIR /contracts-mon-bot/user-contracts-mon
+
 RUN go mod tidy
 
 RUN go build -o contractsmon main.go
