add farm-node-power manager

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,7 @@ jobs:
       matrix:
         dir:
           - activation-service
+          - farmerbot 
           - grid-cli
           - grid-client
           - gridify
