--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,6 +29,7 @@ jobs:
       matrix:
         dir:
           - activation-service
+          - farmerbot 
           - grid-cli
           - grid-client
           - grid-proxy
