wip: add public_ip_cache table
Co-authored-by: Mario Bassem <mariobassem12@gmail.com>

--- a/grid-proxy/Makefile
+++ b/grid-proxy/Makefile
@@ -51,6 +51,7 @@ server-start: ## Start the proxy server			(Args: `m=<MNEMONICS>`)
 		--postgres-db tfgrid-graphql \
 		--postgres-password postgres \
 		--postgres-user postgres \
+		--sql-log-level 4 \
 		--mnemonics "$(m)" ;
 
 all-start: db-stop db-start sleep db-fill server-start ## Full start of the database and the server (Args: `m=<MNEMONICS>`)
