fix random values in farmerbot tests and remove sorting, allow docker to use start and start all commands

--- a/farmerbot/Dockerfile
+++ b/farmerbot/Dockerfile
@@ -16,4 +16,4 @@ WORKDIR /app
 
 COPY --from=builder /src/farmerbot/bin/farmerbot .
 
-ENTRYPOINT [ "./farmerbot", "run" ]
+ENTRYPOINT [ "./farmerbot" ]
