--- a/monitoring-bot/Makefile
+++ b/monitoring-bot/Makefile
@@ -5,48 +5,28 @@ revision=$(shell git rev-parse HEAD)
 dirty=$(shell test -n "`git diff --shortstat 2> /dev/null | tail -n1`" && echo "*")
 ldflags='-w -s -X $(version).Branch=$(branch) -X $(version).Revision=$(revision) -X $(version).Dirty=$(dirty)'
 
-all: getdeps test
-
-getdeps:
-	@echo "Installing gocyclo" && go get  -u github.com/fzipp/gocyclo/cmd/gocyclo
-	@echo "Installing deadcode" && go get -u github.com/remyoudompheng/go-misc/deadcode
-	@echo "Installing misspell" && go get -u github.com/client9/misspell/cmd/misspell
-	@echo "Installing golangci-lint" && curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b ${GOPATH}/bin v1.50.1
-	@curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.50.1
-	@wget -O- -nv https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.50.1
-
-
-verifiers: fmt lint cyclo deadcode spelling staticcheck
-
-checks: verifiers
-
-fmt:
-	@echo "Running $@"
-	@gofmt -d .
-
-lint:
-	@echo "Running $@"
-	@${GOPATH}/bin/golangci-lint run
-
-cyclo:
-	@echo "Running $@"
-	@${GOPATH}/bin/gocyclo -over 100 .
-
-deadcode:
-	@echo "Running $@"
-	@${GOPATH}/bin/deadcode -test $(shell go list ./...) || true
-
-spelling:
-	@${GOPATH}/bin/misspell -i monitord -error `find .`
-
-staticcheck:
-	go run honnef.co/go/tools/cmd/staticcheck -- ./...
+all: lint build test
 
 test:
 	go test -v -vet=off ./...
 
 benchmarks:
 	go test -v -vet=off ./... -bench=. -count 1 -benchtime=10s -benchmem -run=^#
+
+getverifiers:
+	@echo "Installing golangci-lint" && go install github.com/golangci/golangci-lint/cmd/golangci-lint
+	go mod tidy
+
+lint:
+	@echo "Running $@"
+	golangci-lint run -c ../.golangci.yml
+
+build:
+	@echo "Running $@"
+	@go build -ldflags=\
+	"-X 'github.com/threefoldtech/tfgrid-sdk-go/monitoring-bot/cmd.commit=$(shell git rev-parse HEAD)'\
+	 -X 'github.com/threefoldtech/tfgrid-sdk-go/monitoring-bot/cmd.version=$(shell git tag --sort=-version:refname | head -n 1)'"\
+	 -o bin/monitoring-bot main.go
 
 coverage: clean 
 	@echo "Installing gopherbadger" && go get -u github.com/jpoles1/gopherbadger && go install github.com/jpoles1/gopherbadger
@@ -63,9 +43,6 @@ testrace: verifiers
 run:
 	go run main.go
 
-build:
-	go build -o bin/monitoring-bot main.go 
-	
 clean:
 	rm ./coverage -rf
 	rm ./bin -rf
