--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           - monitoring-bot
           # - rmb-sdk-go
           - user-contracts-mon 
-          - mass-deployer
+          # - mass-deployer
 
     steps:
       - uses: actions/checkout@v4
