--- a/mass-deployer/Makefile
+++ b/mass-deployer/Makefile
@@ -7,41 +7,12 @@ test:
 	go test -v ./...
 
 getverifiers:
-	@echo "Installing staticcheck" && go get -u honnef.co/go/tools/cmd/staticcheck && go install honnef.co/go/tools/cmd/staticcheck
-	@echo "Installing gocyclo" && go get -u github.com/fzipp/gocyclo/cmd/gocyclo && go install github.com/fzipp/gocyclo/cmd/gocyclo
-	@echo "Installing deadcode" && go get -u github.com/remyoudompheng/go-misc/deadcode && go install github.com/remyoudompheng/go-misc/deadcode
-	@echo "Installing misspell" && go get -u github.com/client9/misspell/cmd/misspell && go install github.com/client9/misspell/cmd/misspell
-	@echo "Installing golangci-lint" && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.55.2
+	@echo "Installing golangci-lint" && go install github.com/golangci/golangci-lint/cmd/golangci-lint
 	go mod tidy
-
-verifiers: fmt lint cyclo deadcode spelling staticcheck
-
-checks: verifiers
-
-fmt:
-	@echo "Running $@"
-	@gofmt -d .
 
 lint:
 	@echo "Running $@"
-	@$(shell go env GOPATH)/bin/golangci-lint run
-
-cyclo:
-	@echo "Running $@"
-	@$(shell go env GOPATH)/bin/gocyclo -over 100 .
-
-deadcode:
-	@echo "Running $@"
-	@$(shell go env GOPATH)/bin/deadcode -test $(shell go list ./...) || true
-
-spelling:
-	@echo "Running $@"
-	@$(shell go env GOPATH)/bin/misspell -i monitord -error `find .`
-
-staticcheck:
-	@echo "Running $@"
-	@$(shell go env GOPATH)/bin/staticcheck -- ./...
-
+	golangci-lint run -c ../.golangci.yml
 
 build:
 	@echo "Running $@"
