--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -37,6 +37,11 @@ jobs:
       - name: Checkout the repo
         uses: actions/checkout@v4
 
+      - name: Checkout latest release tag
+        run: |
+          LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
+          git checkout $LATEST_TAG
+
       - name: Log in to the Container registry
         uses: docker/login-action@v3.0.0
         with:
