--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -13,7 +13,7 @@ on:
   workflow_run:
     workflows: [Release]
     types: [completed]
-  workflow_dispatch:
+    workflow_dispatch:
 
 jobs:
   push-docker-images:
@@ -36,11 +36,6 @@ jobs:
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v4
-
-      - name: Checkout latest release tag
-        run: |
-          LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
-          git checkout $LATEST_TAG
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3.0.0
@@ -67,7 +62,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           #  For workflows triggered by release, `github.ref_name` is the short name for the release tag created.
           build-args: |
-            version=${{ github.ref_name	 }}
+            version=${{ github.event.workflow_run.head_branch	 }}
 
       # - name: Push flist to grid hub
       #   uses: fjogeleit/http-request-action@v1
