--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @muhamadazmy @MarioBassem @ashraffouda @rawdaGastan @AlaaElattar @AbdelrahmanElawady @xmonader @sameh-farouk
+* @muhamadazmy @MarioBassem @ashraffouda @rawdaGastan @Omarabdul3ziz @AbdelrahmanElawady @xmonader @sameh-farouk @Eslam-Nawara
